--- a/src/assets/scss/partials/_variables.scss
+++ b/src/assets/scss/partials/_variables.scss
@@ -1,1 +1,6 @@
-
+$red-text : red;
+$white-text : white;
+$bcg-color: black;
+$bcg-color-transparent:  rgba(0, 0, 0, .8);
+$full-star: yellow;
+$bcg-color-cardcontainer: #1f1f1f;
