--- a/src/assets/scss/partials/_generals.scss
+++ b/src/assets/scss/partials/_generals.scss
@@ -1,42 +1,60 @@
+@use './variables' as *;
+
 .flip-card {
   background-color: transparent;
   width: 300px;
   height: 400px;
-  perspective: 1000px;
 
   .flip-card-inner {
     position: relative;
     width: 100%;
     height: 100%;
-    transition: transform 0.8s;
-    transform-style: preserve-3d;
-  }
-  &:hover .flip-card-inner {
-    transform: rotateY(180deg);
-  }
 
-  .flip-card-front, .flip-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden; 
-    backface-visibility: hidden;
-  }
-
-  .flip-card-front {
-    background-color: black;
-  }
-
-
-  .flip-card-back {
-    background-color: black;
-    color: white;
-    transform: rotateY(180deg);
-    overflow-y: scroll;
-    overflow-x: hidden;
-
-    strong{
-      color: red;
+    .flip-card-front, .flip-card-back {
+      position: absolute;
+      width: 100%;
+      height: 100%;
     }
+
+    .flip-card-front {
+      background-color: $bcg-color ;
+      color : $red-text ;
+      text-align: center;
+      line-height: 400px;
+      text-transform: uppercase;
+      font-weight: bold;
+
+      .poster{
+        height: 100%;
+        width: 100%;
+      }
+    }
+
+    .flip-card-back {
+      display: none;
+      background-color: $bcg-color-transparent;
+      color: $white-text;
+      overflow-y: scroll;
+      overflow-x: hidden;
+  
+      strong{
+        color: $red-text ;
+      }
+
+      .flag{
+        width: 30px;
+      }
+      
+      .full{
+        color: $bcg-color-cardcontainer;
+      }
+      
+    }
+
+  
+    &:hover .flip-card-back{
+      display: block;
+    }    
   }
-}
+}  
+
